update work section

--- a/index.phtml
+++ b/index.phtml
@@ -1,36 +1,5 @@
 <?php include 'header.php'; ?>
-<body>
-<div class="navbar-wrapper">
-    <div class="container">
-
-        <nav class="navbar navbar-inverse navbar-static-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.phtml">Portfolio</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.phtml">Home</a></li>
-                        <li><a href="cv.html">CV</a></li>
-                        <li><a href="blog">Blog</a></li>
-                        <li><a href="work.html">Work</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-    </div>
-</div>
-
-
+<?php include 'navigation.php'; ?>
 <!--&lt;!&ndash; Carousel-->
 <!--================================================== &ndash;&gt;-->
 <!--<div id="myCarousel" class="carousel slide" data-ride="carousel">-->
@@ -132,48 +101,5 @@
             <p><a class="btn btn-success" href="blog" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
-
-    <!-- START THE FEATURETTES -->
-    <div class="container marketing">
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-            <div class="col-md-7">
-                <h2 class="featurette-heading">Contact Me.</h2>
-                <p class="lead">
-                    Feel free to contact me on though social media platforms, and see my GIT account and STACK.
-                </p>
-                <p>
-                   Email address: benoats@gmail.com
-                </p>
-            </div>
-            <div class="col-md-5">
-                <img class="featurette-image img-responsive center-block" src="image/contact.jpg" alt="Generic placeholder image">
-            </div>
-        </div>
-
-        <!-- /END THE FEATURETTES -->
-
-    <!-- FOOTER -->
-    <div>
-        <p class="pull-right">
-        <a href="#">Back to top</a></p>
-        <p>&copy; Benjamin Graham Oats, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-    </footer>
-
-</div><!-- /.container -->
-
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
-<script src="js/bootstrap.min.js"></script>
-<!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-<script src="js/vendor/holder.min.js"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="js/ie10-viewport-bug-workaround.js"></script>
-</body>
-</html>
+    <?php include 'footer.php'; ?>
+   
