--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,20 @@ object.infographic {
     width: 100%;
     overflow: auto;
 }
+
+.work_image img {
+    height: 100px;
+}
+
+.work_text  {
+    min-height: 70px;
+    /*height: 75px;*/
+}
+
+.work_text_h3 {
+    min-height: 60px;
+}
+
+/*.work_header h3  {*/
+    /*min-height: 55px !important;*/
+/*}*/
