--- a/index.phtml
+++ b/index.phtml
@@ -1,6 +1,6 @@
 <?php include 'header.php'; ?>
 <?php include 'navigation.php'; ?>
-<?php //include 'slider.php'; ?>
+<?php include 'slider.php'; ?>
 
 <div class="container marketing">
 
