--- a/css/slider.css
+++ b/css/slider.css
@@ -3,7 +3,7 @@
     padding: 10px 15px;
 }
 .skyblue {
-    background: #22c8ff url("../image/websites/SavingsSystem.png") no-repeat center;
+    background: #22c8ff url("../image/websites/JesusChristSuperstar.png") no-repeat center;
     background-size: Auto 280px;
     border-radius: 15px;
     /*background: linear-gradient(to right, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 240px, rgba(255, 255, 255, 1) 290px), url("../image/websites/SavingsSystem.png") no-repeat;*/
@@ -14,11 +14,27 @@
     box-sizing: border-box;
 }
 .deepskyblue {
-    background-color: #00bfff;
+    background: #ff7844 url("../image/websites/SavingsSystem.png") no-repeat center;
+    background-size: Auto 280px;
+    border-radius: 15px;
+    /*background: linear-gradient(to right, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 240px, rgba(255, 255, 255, 1) 290px), url("../image/websites/SavingsSystem.png") no-repeat;*/
+    height: 500px;
+    width: 500px;
+    border: solid 1px #000;
+    padding-left: 250px;
+    box-sizing: border-box;
 
 }
 .darkerskyblue {
-    background-color: #00a6dd;
+    background: #3cdd33 url("../image/websites/TwitterQuery.png") no-repeat center;
+    background-size: Auto 280px;
+    border-radius: 15px;
+    /*background: linear-gradient(to right, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 240px, rgba(255, 255, 255, 1) 290px), url("../image/websites/SavingsSystem.png") no-repeat;*/
+    height: 500px;
+    width: 500px;
+    border: solid 1px #000;
+    padding-left: 250px;
+    box-sizing: border-box;
 }
 /*.backgroundone {*/
     /*background: #22c8ff url("../image/websites/SavingsSystem.png") no-repeat center;*/
@@ -37,7 +53,6 @@
     width:100%;
 }
 .carousel-caption h3 ,
-.carousel-caption p ,
 .carousel .icon-container,
 .carousel-caption button {
     background-color: rgba(0, 153, 204, 0.75);
@@ -83,4 +98,32 @@ h1 {
 
 .p a {
     text-decoration: underline;
+}
+
+.bw {
+    filter: gray; /* IE6-9 */
+    filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
+    -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+}
+
+.bw:hover {
+    filter: none;
+    -webkit-filter: grayscale(0);
+}
+
+/*TILT*/
+.tilt {
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.tilt:hover {
+    -webkit-transform: rotate(-10deg);
+    -moz-transform: rotate(-10deg);
+    -o-transform: rotate(-10deg);
+    -ms-transform: rotate(-10deg);
+    transform: rotate(-10deg);
 }
