--- a/index.phtml
+++ b/index.phtml
@@ -4,7 +4,7 @@
 
 <div class="container marketing">
 
-    <div class="row featurette">
+    <div class="row featurette section_blue">
         <div class="col-md-7">
             <h2 class="featurette-heading">About Me. <span class="text-muted">Hi, Im Ben and im a Developer.</span></h2>
             <p class="lead">
@@ -23,7 +23,7 @@
 
     <hr class="featurette-divider">
 
-    <div class="row">
+    <div class="row section_red">
 
         <div class="col-lg-4">
             <img class="img-circle" src="image/work.png" alt="Generic placeholder image" width="140" height="140">
