added h2 and p colour

--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,11 @@ object.infographic {
     background: -webkit-linear-gradient(top,  #ff3019 0%,#cf0404 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom,  #ff3019 0%,#cf0404 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3019', endColorstr='#cf0404',GradientType=0 ); /* IE6-9 */
-
     border-radius: 30px;
+}
+
+.section_red p h2 {
+    color: blanchedalmond;
 }
 
 .navbar-custom {
